# netzer

./: Cargo.toml
examples/: simple.rs
netzer-derive/: Cargo.toml
netzer-derive/src/: encode.rs  error.rs  lib.rs  util.rs
netzer-derive/src/enums/: decode.rs  encode.rs  mod.rs
netzer-derive/src/structs/: decode.rs  encode.rs  mod.rs
netzer-derive/src/util/: mod.rs  where_clause.rs
netzer-derive/src/value/: decode.rs  encode.rs  mod.rs
src/: lib.rs  numeric.rs  string.rs  varint.rs  with.rs
src/impls/: length_prefixed.rs  mod.rs  string.rs  unstable.rs  utf8.rs  varint.rs
