[package]
name    = "netzer"
version = "0.1.0"
edition = "2024"

[features]
default = [ "derive", "smol" ] # TODO: Remove
derive  = [ "dep:netzer-derive" ]
smol    = [ "dep:smol", "netzer-derive/async" ]

[lints.rust]
unused_parens = "allow"


[dependencies.netzer-derive]
path     = "netzer-derive"
optional = true

[dependencies.smol]
version  = "2.0"
optional = true
