[package]
name    = "netzer"
version = "0.1.0"
edition = "2024"

[features]
derive   = [ "dep:netzer-derive" ]
unstable = [ ]

[lints.rust]
unused_parens = "allow"
# missing_docs  = "deny" # TODO


[dependencies.netzer-derive]
path     = "netzer-derive"
optional = true

[dependencies.smol]
version = "2.0"
